--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,16 +1,3 @@
-@font-face {
-    font-family: 'web_symbolsregular';
-    src: url('../font/websymbols-regular-webfont.eot');
-    src: url('../font/websymbols-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../font/websymbols-regular-webfont.woff') format('woff'),
-         url('../font/websymbols-regular-webfont.ttf') format('truetype'),
-         url('../font/websymbols-regular-webfont.svg#web_symbolsregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-
 .connect_admin {
 margin:auto;
 width : 350px;
@@ -163,8 +150,8 @@ h1{
   		 transform : scale(1); }
 }
 
-.formulaire input {
-width : 400px;
+.formulaire input{
+width : 200px;
 height : 30px;
 margin-bottom : 10px;
 font-size : 15px;
@@ -181,6 +168,12 @@ text-align : center;
   -moz-animation:    app 1.5s; /* Fx 5+ */
   -o-animation:      app 1.5s; /* Opera 12+ */
   animation:         app 1.5s; /* IE 10+ */
+}
+
+img {
+	width:90px; 
+	height:90px; 
+	position:relative;
 }
 
 .formulaire input#submit {
