--- a/WebContent/css/sopraturage.css
+++ b/WebContent/css/sopraturage.css
@@ -8,7 +8,64 @@ background: url('../images/brushed.png'); /*#4b8baf*/
 .page{
 	margin:auto;
 	width:70%;
-	height:1000px;
+	height:auto;
 	background-color : white;
 	box-shadow : 0px 0px 3px rgb(150,150,150);
+}
+
+
+
+.titre_page{
+	padding:0;
+	margin:0;
+	margin-top:-4px;
+	width:100%;
+	background-color:#eae9e3;
+	
+}
+
+form input[type="text"], form input[type="tel"],form input[type="password"], 
+form input[type="email"], form select, form input[type="submit"] {
+	width:500px;
+	height:40px;
+	margin-top: 20px;
+	margin-bottom:10px;
+	font-size : 15px;
+	padding-left : 5px;
+	color : #d3182a;
+}
+
+form input[type="submit"] {
+	background-color: #d3182a;
+	border:none;
+	color : white;
+	font-size : 25px;
+}
+
+form select{
+	height:40px;
+	color : black;
+}
+
+
+
+h1{
+	padding:5px;
+	margin:0;
+	font-size : 30px;
+	text-transform : uppercase;
+	text-align:center;
+	font-family: 'Avenir Next', Arial;
+	font-weight:normal;
+}
+
+.formulaire{
+	
+	margin:auto;
+	padding-top:30px;
+	padding-bottom : 30px;
+	text-align:center;
+
+
+
 }
