--- a/WebContent/css/sopraturage.css
+++ b/WebContent/css/sopraturage.css
@@ -26,12 +26,11 @@ background: url('../images/brushed.png'); /*#4b8baf*/
 
 form input[type="text"], form input[type="tel"],form input[type="password"], 
 form input[type="email"], form select, form input[type="submit"] {
-	width:500px;
+	width:100%;
 	height:40px;
 	margin-top: 20px;
 	margin-bottom:10px;
 	font-size : 15px;
-	padding-left : 5px;
 	color : #d3182a;
 }
 
@@ -41,6 +40,10 @@ form input[type="submit"] {
 	color : white;
 	font-size : 25px;
 }
+
+form input[type="checkbox"] {
+	text-align:left;	
+}	
 
 form select{
 	height:40px;
@@ -59,21 +62,24 @@ h1{
 	font-weight:normal;
 }
 
-.formulaire{
+label{
+	font-size:15px;
+	font-family : Arial;
+}
+
+
+.form_create_account{
 	
+	width : 50%;
 	margin:auto;
-	padding-top:30px;
-	padding-bottom : 30px;
-	text-align:center;
-
-
+	padding-top : 10px;
+	padding-bottom : 10px;
 
 }
 
 p {
 	
 	font-size:12px;
-	font-family : Arial;
-	
+	font-family : Arial;	
 	
 }
