--- a/WebContent/css/sopraturage.css
+++ b/WebContent/css/sopraturage.css
@@ -28,8 +28,6 @@ form input[type="text"], form input[type="tel"],form input[type="password"],
 form input[type="email"], form select, form input[type="submit"] {
 	width:100%;
 	height:40px;
-	margin-top: 20px;
-	margin-bottom:10px;
 	font-size : 15px;
 	color : #d3182a;
 }
@@ -48,6 +46,7 @@ form input[type="checkbox"] {
 form select{
 	height:40px;
 	color : black;
+	border : none;
 }
 
 
@@ -72,8 +71,8 @@ label{
 	
 	width : 50%;
 	margin:auto;
-	padding-top : 10px;
-	padding-bottom : 10px;
+	padding-top : 30px;
+	padding-bottom : 30px;
 
 }
 
