--- a/WebContent/css/sopraturage.css
+++ b/WebContent/css/sopraturage.css
@@ -25,12 +25,13 @@ background: url('../images/brushed.png'); /*#4b8baf*/
 }
 
 form input[type="text"], form input[type="tel"],form input[type="password"], 
-form input[type="email"], form select, form input[type="submit"] {
+form input[type="email"], form select, form input[type="submit"], form input[type="number"] {
 	width:100%;
 	height:40px;
 	font-size : 15px;
 	color : #d3182a;
 }
+
 
 form input[type="submit"] {
 	background-color: #d3182a;
