--- a/WebContent/css/sopraturage.css
+++ b/WebContent/css/sopraturage.css
@@ -5,15 +5,24 @@ padding:0;
 background: url('../images/brushed.png'); /*#4b8baf*/
 }
 
+
+
 .page{
 	margin:auto;
-	width:70%;
+	width:90%;
 	height:auto;
 	background-color : white;
 	box-shadow : 0px 0px 3px rgb(150,150,150);
 }
 
-
+.head{
+	padding:0;
+	margin:0;
+	margin-top:-4px;
+	width:100%;
+	background-color:#cc0000;
+	
+}
 
 .titre_page{
 	padding:0;
@@ -53,12 +62,21 @@ form select{
 
 
 h1{
-	padding:5px;
+	padding:20px;
 	margin:0;
 	font-size : 30px;
-	text-transform : uppercase;
+	text-align:left;
+	font-family: 'Mistral', Arial;
+	font-weight:normal;
+	color : white;
+}
+
+h2{
+	padding:10px;
+	margin:0;
+	font-size : 20px;
 	text-align:center;
-	font-family: 'Avenir Next', Arial;
+	font-family: 'Eurostile', Arial;
 	font-weight:normal;
 }
 
