--- a/WebContent/css/sopraturage.css
+++ b/WebContent/css/sopraturage.css
@@ -52,6 +52,8 @@ li:hover{
 }
 
 .head{
+	text-align:center;
+	height : 70px;
 	padding:0;
 	margin:0;
 	margin-top:-4px;
@@ -95,9 +97,20 @@ form select{
 	border : none;
 }
 
+.titre_sop{
+	height : 100%;
+	width : 49%;
+}
 
+.pseudo{
+	height : 100%;
+	width : 49%;
+	text-align : right;
+	
+}
 
 h1{
+	line-height : 35px;
 	padding:20px;
 	margin:0;
 	font-size : 30px;
@@ -107,6 +120,30 @@ h1{
 	color : white;
 }
 
+
+
+.pseudo a{
+ 	padding-right : 15px;
+ 	line-height : 35px;
+	font-size : 15px;
+	text-align: right;
+	font-family: 'Eurostile', Arial;
+	text-decoration: none;
+	color : white;
+	line-height : 70px;
+}
+
+
+.pseudo a:hover{
+	color : #eeeeee;
+	text-decoration: underline;
+}
+
+.titre_sop, .pseudo{
+	display:inline-block;
+	vertical-align:top;
+}
+
 h2{
 	padding:10px;
 	margin:0;
@@ -114,6 +151,11 @@ h2{
 	text-align:center;
 	font-family: 'Eurostile', Arial;
 	font-weight:normal;
+}
+
+.img_rouages{
+	position:relative;
+	top : 5px;
 }
 
 label{
