--- a/WebContent/css/sopraturage.css
+++ b/WebContent/css/sopraturage.css
@@ -197,6 +197,14 @@ p {
 }
 
 .important_information {
-	font-size : 18px;
+	font-size : 15px;
+}
+
+.time{
+	width:50px;
+	height : 20px;
+	display:inline-block;
+	vertical-align : top;
+	
 }
 
