--- a/WebContent/css/sopraturage.css
+++ b/WebContent/css/sopraturage.css
@@ -46,6 +46,7 @@ li:hover{
 .page{
 	margin:auto;
 	width:90%;
+	min-height:700px;
 	height:auto;
 	background-color : white;
 	box-shadow : 0px 0px 3px rgb(150,150,150);
@@ -205,6 +206,13 @@ p {
 	height : 20px;
 	display:inline-block;
 	vertical-align : top;
+	
+}
+
+.address{
+	color : #cc0000;
+	font-size : 18px;
+	text-align:center;
 	
 }
 
