--- a/WebContent/css/sopraturage.css
+++ b/WebContent/css/sopraturage.css
@@ -46,7 +46,7 @@ li:hover{
 .page{
 	margin:auto;
 	width:90%;
-	min-height:700px;
+	
 	height:auto;
 	background-color : white;
 	box-shadow : 0px 0px 3px rgb(150,150,150);
@@ -86,6 +86,7 @@ form input[type="submit"] {
 	border:none;
 	color : white;
 	font-size : 25px;
+	margin-bottom : 40px;
 }
 
 form input[type="checkbox"] {
@@ -199,6 +200,12 @@ p {
 
 .important_information {
 	font-size : 15px;
+}
+
+.notification_information {
+	font-size : 15px;
+	text-align:center;
+	padding : 30px;
 }
 
 .time{
