--- a/WebContent/css/sopraturage.css
+++ b/WebContent/css/sopraturage.css
@@ -1,3 +1,5 @@
+html{}
+
 body {
 height:100%;
 margin : 0;
@@ -46,7 +48,6 @@ li:hover{
 .page{
 	margin:auto;
 	width:90%;
-	
 	height:auto;
 	background-color : white;
 	box-shadow : 0px 0px 3px rgb(150,150,150);
