--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -75,13 +75,15 @@ top : -57px;
 }
 
 h1{
-	font-family : "Helvetica",Arial;
-	font-weight:normal;
-	font-size : 14px;
-	height:20px;
-	padding:0;
-	color : #d3182a;
+	line-height : 70px;
+	padding:20px;
 	
+	margin:0;
+	font-size : 40px;
+	text-align:center;
+	font-family: 'Mistral', Arial;
+	font-weight:normal;
+	color : #cc0000;
 }
 
 
