--- a/WebContent/css/sopraturage.css
+++ b/WebContent/css/sopraturage.css
@@ -243,3 +243,18 @@ table{
 	border-collapse: collapse;
 }
 
+.paire{
+	background-color : rgb(235,235,235);
+	
+}
+
+.impaire{
+	background-color : rgb(250,250,250);
+	
+}
+
+.action{
+	height:20px;
+	background-color : white;
+	color : black;
+}
