--- a/WebContent/css/account.css
+++ b/WebContent/css/account.css
@@ -143,7 +143,7 @@ p {
 table{
 	width : 100%;
 	border-collapse: collapse;
-	border : 1px solid rgb(200,200,200);
+	
 }
 
 .paire{
@@ -155,6 +155,19 @@ table{
 	background-color : rgb(250,250,250);
 	
 }
+
+tr{
+	border-bottom:1px solid black;
+}
+
+th{
+	border:none;
+}
+
+td{
+	border : none;
+}
+
 
 
 
