--- a/WebContent/css/account.css
+++ b/WebContent/css/account.css
@@ -162,10 +162,17 @@ tr{
 
 th{
 	border:none;
+	
 }
 
 td{
 	border : none;
+}
+
+.th {
+	color : #CC0000;
+	font-size : 15px;
+	font-family : "Helvetica", Arial;
 }
 
 
