--- a/WebContent/css/search.css
+++ b/WebContent/css/search.css
@@ -4,7 +4,10 @@
 	width:100%;
 	text-align:center;
 	
+		
 }
+
+
 
 .button_adv a{
 	padding:10px;
@@ -12,7 +15,26 @@
 	font-family : "Helvetica", Arial;
 	color : white;
 	text-decoration:none;
+	box-shadow : 0px 0px 2px rgb(150,150,150);
+	-webkit-border-radius : 5px;
+	-moz-border-radius : 5px;
+	-o-border-radius : 5px;
+	-ms-border-radius : 5px;
+	border-radius : 5px;
+	
+	-webkit-transition: all 0.4s ease;
+	-moz-transition: all 0.4s ease;
+	-o-transition: all 0.4s ease;
+	-ms-transition: all 0.4s ease;
+	transition: all 0.4s ease;
 }
+
+.button_adv:hover a{
+	background-color : rgb(230,230,230);
+	color : #CC0000;
+}
+
+
 
 #divacacher{
 	display:none;
@@ -320,6 +342,10 @@ p {
 .more{
 	background-color : white;
 	padding: 10px;
+	-webkit-border-radius : 5px;
+	-moz-border-radius : 5px;
+	-o-border-radius : 5px;
+	-ms-border-radius : 5px;
 	border-radius : 5px;
 	color : #CC0000;
 	text-decoration:none;
@@ -354,7 +380,7 @@ p {
 
 
 .avatar{
-	width: 90px;
+	width: 80px;
 	height: 90px;
 	margin-right:30px;
 }
