--- a/WebContent/css/sopraturage.css
+++ b/WebContent/css/sopraturage.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'archivo_narrowregular';
+    src: url('font/archivonarrow-regular-webfont.eot');
+    src: url('font/archivonarrow-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('font/archivonarrow-regular-webfont.woff') format('woff'),
+         url('font/archivonarrow-regular-webfont.ttf') format('truetype'),
+         url('font/archivonarrow-regular-webfont.svg#archivo_narrowregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 html{}
 
 body {
