--- a/WebContent/css/account.css
+++ b/WebContent/css/account.css
@@ -1,4 +1,18 @@
 @CHARSET "UTF-8";
+
+@font-face {
+    font-family: 'mistralregular';
+    src: url('../font/mistral-webfont.eot');
+    src: url('../font/mistral-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../font/mistral-webfont.woff2') format('woff2'),
+         url('../font/mistral-webfont.woff') format('woff'),
+         url('../font/mistral-webfont.ttf') format('truetype'),
+         url('../font/mistral-webfont.svg#mistralregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 html{}
 
 body {
@@ -46,7 +60,7 @@ h1{
 	margin:0;
 	font-size : 30px;
 	text-align:left;
-	font-family: 'Mistral', Arial;
+	font-family: 'mistralregular', Arial;
 	font-weight:normal;
 	color : white;
 }
@@ -57,7 +71,7 @@ h4{
 	margin:0;
 	font-size : 30px;
 	text-align:left;
-	font-family: 'Mistral', Arial;
+	font-family: 'mistralregular', Arial;
 	font-weight:normal;
 	color : black;
 }
