--- a/WebContent/css/search.css
+++ b/WebContent/css/search.css
@@ -1,5 +1,18 @@
 @CHARSET "UTF-8";
 
+@font-face {
+    font-family: 'mistralregular';
+    src: url('../font/mistral-webfont.eot');
+    src: url('../font/mistral-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../font/mistral-webfont.woff2') format('woff2'),
+         url('../font/mistral-webfont.woff') format('woff'),
+         url('../font/mistral-webfont.ttf') format('truetype'),
+         url('../font/mistral-webfont.svg#mistralregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 .button_adv{
 	width:100%;
 	text-align:center;
@@ -171,7 +184,7 @@ h1{
 	margin:0;
 	font-size : 30px;
 	text-align:left;
-	font-family: 'Mistral', Arial;
+	font-family: 'mistralregular', Arial;
 	font-weight:normal;
 	color : white;
 }
@@ -182,7 +195,7 @@ h4{
 	margin:0;
 	font-size : 30px;
 	text-align:left;
-	font-family: 'Mistral', Arial;
+	font-family: 'mistralregular', Arial;
 	font-weight:normal;
 	color : black;
 }
