--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: 'mistralregular';
+    src: url('../font/mistral-webfont.eot');
+    src: url('../font/mistral-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../font/mistral-webfont.woff2') format('woff2'),
+         url('../font/mistral-webfont.woff') format('woff'),
+         url('../font/mistral-webfont.ttf') format('truetype'),
+         url('../font/mistral-webfont.svg#mistralregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 .connect_admin {
 margin:auto;
 width : 350px;
@@ -81,7 +94,7 @@ h1{
 	margin:0;
 	font-size : 40px;
 	text-align:center;
-	font-family: 'Mistral', Arial;
+	font-family: 'mistralregular', Arial;
 	font-weight:normal;
 	color : #cc0000;
 }
