--- a/WebContent/css/sopraturage.css
+++ b/WebContent/css/sopraturage.css
@@ -268,5 +268,93 @@ p {
 }
 
 
+.the_profile{
+	width:100%;
+	text-align:center;
+	
+	
+}
+
+.the_avatar, .the_information{
+	display:inline-block;
+	vertical-align:top;
+}
+
+
+
+.the_avatar img{
+	box-shadow : 0px 0px 2px rgb(100,100,100);
+	margin:30px;
+}
+
+.the_information{
+	padding-left : 40px;
+	width : 60%;
+	text-align:left;
+	box-shadow : 0px 0px 2px rgb(100,100,100);
+}
+
+.nom, .surnom{
+	font-size : 18px;
+	color : #CC0000;
+	font-family : "Helvetica", Arial;	
+}
+
+.surnom{
+	text-transform : uppercase;
+}
+
+.email{
+	font-size : 14px;
+	color : rgb(80,80,80);
+	font-family : "Helvetica", Arial;
+}
+
+.titre{
+	font-size : 14px;
+	color : rgb(20,20,20);
+	font-family : "Helvetica", Arial;
+}
+
+.more{
+	background-color: #CC0000;
+	padding: 10px;
+	-webkit-border-radius : 5px;
+	-moz-border-radius : 5px;
+	-o-border-radius : 5px;
+	-ms-border-radius : 5px;
+	border-radius : 5px;
+	color : white;
+	text-decoration:none;
+	font-size : 14px;
+	font-family: "Helvetica", Arial;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	box-shadow : 0px 0px 2px rgb(150,150,150);
+	
+	-webkit-transition: all 0.4s ease;
+	-moz-transition: all 0.4s ease;
+	-o-transition: all 0.4s ease;
+	-ms-transition: all 0.4s ease;
+	transition: all 0.4s ease;
+}
+
+.more:hover{
+	
+	background-color : white;
+	color : #CC0000;
+}
+
+.button_more{
+	height:50px;
+	
+}
+
+@media (max-width:800px){
+	.the_information{
+		text-align:center;
+		padding:0;
+	}
+}
 
 
