--- a/WebContent/css/search.css
+++ b/WebContent/css/search.css
@@ -396,6 +396,7 @@ p {
 	width: 80px;
 	height: 90px;
 	margin-right:30px;
+	box-shadow: 0px 0px 2px rgb(150,150,150);
 }
 
 .avatar, .infos, .more_profil{
